--- a/LoboEvo/.classpath
+++ b/LoboEvo/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="/LoboLib/lib/sqlite-jdbc-3.21.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LoboJTattoo"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LoboPDF"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LoboIViewer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
