--- a/LoboHtml/.classpath
+++ b/LoboHtml/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/LoboCommon"/>
 	<classpathentry kind="lib" path="/LoboLib/lib/xalan.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LoboPDF"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LoboIViewer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
