--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -24,4 +24,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: SonarSource/sonarcloud-github-action@v1.5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
