--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -6,9 +6,9 @@ name: SonarCloud Scan
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [  master ]
+    branches: [  oswetto-patch-1 ]
   pull_request:
-    branches: [  master ]
+    branches: [  oswetto-patch-1 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
