--- a/pom.xml
+++ b/pom.xml
@@ -3,30 +3,119 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
     http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.loboevolution</groupId>
-	<artifactId>lobo-build</artifactId>
-	<version>1.0</version>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.8</version>
-				<executions>
-					<execution>
-						<phase>process-resources</phase>
-						<configuration>
-							<target name="default">
-								<ant antfile="build.xml"/>
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.loboevolution</groupId>
+    <artifactId>LoboEvolution</artifactId>
+    <version>1.0</version>
+    <packaging>pom</packaging>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <modules>
+        <module>LoboCommon</module>
+        <module>LoboApi</module>
+        <module>LoboParser</module>
+        <module>LoboPDF</module>
+        <module>LoboIViewer</module>
+        <module>LoboJTattoo</module>
+        <module>LoboHTML</module>
+		<module>LoboUnitTest</module>
+        <module>LoboEvo</module>
+    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboCommon</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboApi</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboParser</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboPDF</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboIViewer</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboJTattoo</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboHTML</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboEvo</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboUnitTest</artifactId>
+            <version>1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fifesoft</groupId>
+            <artifactId>rsyntaxtextarea</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.loboevolution.init.PlatformInit</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
