--- a/LoboUnitTest/pom.xml
+++ b/LoboUnitTest/pom.xml
@@ -54,8 +54,12 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                    <outputDirectory>../docs</outputDirectory>
+                    <outputName>index</outputName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
