Implemented lombok @Data @Builder @NoArgsConstructor @AllArgsConstructor

--- a/LoboCommon/pom.xml
+++ b/LoboCommon/pom.xml
@@ -20,5 +20,12 @@
 			<artifactId>LoboW3C</artifactId>
 			<version>1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+		</dependency>
+
 	</dependencies>
 </project>
