Separate data store

--- a/LoboHTML/pom.xml
+++ b/LoboHTML/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
         <dependency>
             <groupId>org.loboevolution</groupId>
+            <artifactId>LoboStore</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
             <artifactId>LoboApi</artifactId>
             <version>1.0</version>
         </dependency>
