Created LoboStore. Moved database items into LoboStore. Removed database references from ColorFactory and FontFactory. Removed HttpNetwork's coupling to the user agent string found in the store. Updated StorageManager to no longer load SQL for colours and user agent.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
 	    <module>LoboW3C</module>
         <module>LoboCommon</module>
+        <module>LoboStore</module>
         <module>LoboApi</module>
         <module>LoboParser</module>
         <module>LoboPDF</module>
@@ -32,6 +33,11 @@
         <dependency>
             <groupId>org.loboevolution</groupId>
             <artifactId>LoboCommon</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboStore</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
