--- a/LoboEvo/pom.xml
+++ b/LoboEvo/pom.xml
@@ -57,6 +57,11 @@
             <version>1.0</version>
         </dependency>
         <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboJhrome</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.36.0.2</version>
