--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>LoboJTattoo</module>
         <module>LoboHTML</module>
 		<module>LoboUnitTest</module>
+        <module>LoboJhrome</module>
         <module>LoboEvo</module>
     </modules>
 
@@ -89,7 +90,7 @@
         <dependency>
             <groupId>com.fifesoft</groupId>
             <artifactId>rsyntaxtextarea</artifactId>
-            <version>3.1.3</version>
+            <version>3.1.6</version>
         </dependency>
         <dependency>
             <groupId>xalan</groupId>
