Added missing settings.xml

--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -3,7 +3,7 @@ name: Publish to GitHub Packages
 on:
   push:
     branches:
-      - master-action
+      - master
   workflow_dispatch:
 jobs:
   build:
