--- a/LoboHTML/pom.xml
+++ b/LoboHTML/pom.xml
@@ -79,4 +79,18 @@
             <version>2.7.2</version>
         </dependency>
     </dependencies>
+	
+	    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
