--- a/LoboIViewer/pom.xml
+++ b/LoboIViewer/pom.xml
@@ -44,5 +44,19 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+	
+	    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
