--- a/LoboUnitTest/pom.xml
+++ b/LoboUnitTest/pom.xml
@@ -88,5 +88,19 @@
             </plugin>
         </plugins>
     </reporting>
+	
+	    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
