--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,13 +35,13 @@ jobs:
         # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
 
     steps:
-    - name: Setup Java JDK
-      uses: actions/setup-java@v1.3.0
+    - name: checkout
+      uses: actions/checkout@v3.0.1
+    - name: set up JDK 1.8
+      uses: actions/setup-java@
       with:
-        java-version: 8
-
-    - name: Checkout repository
-      uses: actions/checkout@v3
+        distribution: 'zulu' # See 'Supported distributions' for available options
+        java-version: '8'
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
