--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -38,7 +38,7 @@ jobs:
     - name: checkout
       uses: actions/checkout@v3.0.1
     - name: set up JDK 1.8
-      uses: actions/setup-java@
+      uses: actions/setup-java@v1.3.0
       with:
         distribution: 'zulu' # See 'Supported distributions' for available options
         java-version: '8'
