--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -36,12 +36,14 @@ jobs:
 
     steps:
     - name: checkout
-      uses: actions/checkout@v3.0.1
+      uses: actions/checkout@v3
     - name: set up JDK 1.8
-      uses: actions/setup-java@v1.3.0
+      uses: actions/setup-java@v3
+      env:
+       ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
       with:
         distribution: 'zulu' # See 'Supported distributions' for available options
-        java-version: '8'
+        java-version: '8'       	
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
