--- a/LoboJhrome/pom.xml
+++ b/LoboJhrome/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.loboevolution</groupId>
     <artifactId>LoboJhrome</artifactId>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.glassfish.corba</groupId>
+            <artifactId>glassfish-corba-omgapi</artifactId>
+            <version>4.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
 
     <properties>
