--- a/LoboHTML/pom.xml
+++ b/LoboHTML/pom.xml
@@ -38,7 +38,7 @@
     </properties>
 
     <dependencies>
-		<dependency>
+        <dependency>
             <groupId>org.loboevolution</groupId>
             <artifactId>LoboW3C</artifactId>
             <version>1.0</version>
@@ -78,9 +78,14 @@
             <artifactId>xalan</artifactId>
             <version>2.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220320</version>
+        </dependency>
     </dependencies>
-	
-	    <build>
+
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
