--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,13 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>3.4.1</version>
             </plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
