--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.oswetto</groupId>
     <artifactId>loboevolution</artifactId>
-    <version>3.1</version>
+    <version>4.0</version>
     <packaging>pom</packaging>
     <name>Lobo Evolution</name>
     <description>Lobo Evolution Java Web Browser</description>
@@ -14,7 +14,7 @@
 
     <licenses>
         <license>
-            <name>The Apache License, Version 3.0</name>
+            <name>MIT</name>
             <url>https://github.com/LoboEvolution/LoboEvolution/blob/master/LICENSE</url>
         </license>
     </licenses>
@@ -216,7 +216,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <finalName>loboevolution-3.1</finalName>
+                    <finalName>loboevolution-4.0</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
