--- a/LoboXalan/pom.xml
+++ b/LoboXalan/pom.xml
@@ -21,6 +21,17 @@
             <artifactId>LoboW3C</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.11</version>
+        </dependency>
     </dependencies>
 
     <build>
