--- a/LoboJhrome/pom.xml
+++ b/LoboJhrome/pom.xml
@@ -16,6 +16,17 @@
             <version>4.2.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.12</version>
+        </dependency>
     </dependencies>
 
     <properties>
