--- a/LoboUnitTest/pom.xml
+++ b/LoboUnitTest/pom.xml
@@ -39,6 +39,11 @@
             <version>1.0</version>
         </dependency>
         <dependency>
+            <groupId>org.loboevolution</groupId>
+            <artifactId>LoboSVG</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.11.0</version>
